# kq-scraper

./: .gitignore  CMakeLists.txt  README.md
cfgs/: nyc.ini
src/: blue.h  economy.h  frameextractor.c  frameextractor.h  frameprocessor.c  frameprocessor.h  frameprocessorconfig.c  frameprocessorconfig.h  frameprocessorresults.c  frameprocessorresults.h  gold.h  main.c  military.h  snail.h
